2011-01-27  Maciej Stachowiak  <mjs@apple.com>

Reviewed by Darin Adler.

        execCommand("Paste") doesn't work in WebKitTestRunner
        https://bugs.webkit.org/show_bug.cgi?id=52785

        Unskip paste tests, except the ones that still fail.

        * platform/mac-wk2/Skipped:
2011-01-27  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin Adler.

        execCommand("Paste") doesn't work in WebKitTestRunner
        https://bugs.webkit.org/show_bug.cgi?id=52785

        Thread through the new JavaScriptCanAccessClipboard setting.

        * Shared/WebPreferencesStore.h:
        * UIProcess/API/C/WKPreferences.cpp:
        (WKPreferencesSetJavaScriptCanAccessClipboard):
        (WKPreferencesGetJavaScriptCanAccessClipboard):
        * UIProcess/API/C/WKPreferences.h:
        * WebProcess/WebPage/WebPage.cpp:
        (WebKit::WebPage::updatePreferences):
2011-01-27  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin Adler.

        execCommand("Paste") doesn't work in WebKitTestRunner
        https://bugs.webkit.org/show_bug.cgi?id=52785

        Enable both of the settings needed to allow paste.

        * WebKitTestRunner/TestController.cpp:
        (WTR::TestController::resetStateToConsistentValues):


Canonical link: https://commits.webkit.org/67089@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76908 268f45cc-cd09-0410-ab3c-d52691b4dbfc